fixed styles menu and cards model

--- a/markup/static/less/libraries/components/logo.less
+++ b/markup/static/less/libraries/components/logo.less
@@ -16,15 +16,15 @@
 }
 
 
-.uk-sticky-fixed.uk-active {
-    .uk-logo {
-        svg {
-            [fill="#376BC7"] {
-                fill: #376BC7;
-            }
-        }
-    }
-}
+// .uk-sticky-fixed.uk-active {
+//     .uk-logo {
+//         svg {
+//             [fill="#376BC7"] {
+//                 fill: #376BC7;
+//             }
+//         }
+//     }
+// }
 
 .uk-logo-image {
     margin-bottom: 8px;
