--- a/markup/static/less/libraries/components/navbar.less
+++ b/markup/static/less/libraries/components/navbar.less
@@ -163,22 +163,22 @@
             padding-bottom: 12px;
         }
 
-        &.uk-sticky {
-            &.uk-active {
-                background-color: #fff;
-                color: @global-color;
-                box-shadow: 0px 5px 20px rgba(48, 48, 50, 0.07);
+        // &.uk-sticky {
+        //     &.uk-active {
+        //         background-color: #fff;
+        //         color: @global-color;
+        //         box-shadow: 0px 5px 20px rgba(48, 48, 50, 0.07);
 
-                .uk-light .uk-navbar-nav>li.uk-active>a,
-                .uk-navbar-nav>li>a {
-                    color: #303032
-                }
+        //         .uk-light .uk-navbar-nav>li.uk-active>a,
+        //         .uk-navbar-nav>li>a {
+        //             color: #303032
+        //         }
 
-                .uk-logo-description {
-                    color: #ACACAE;
-                }
-            }
-        }
+        //         .uk-logo-description {
+        //             color: #ACACAE;
+        //         }
+        //     }
+        // }
     }
 
     .uk-hamburger {
