--- a/markup/components/navbar/navbar.html
+++ b/markup/components/navbar/navbar.html
@@ -129,6 +129,18 @@
                                         </div>
                                     </a>
                                 </div>
+                                <div class="uk-width-expand">
+                                    <a href="#" class="uk-card uk-card-feature">
+                                        <div class="uk-card-left">
+                                            <div class="uk-card-icon">
+                                                {{Icon iconName="report"}}
+                                            </div>
+                                        </div>
+                                        <div class="uk-card-body">
+                                            <div class="uk-card-title">Корпоративные продажи</div>
+                                        </div>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </li>
