--- a/markup/components/navbar/navbar.html
+++ b/markup/components/navbar/navbar.html
@@ -117,7 +117,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="uk-width-expand">
+                                <div>
                                     <a href="#" class="uk-card uk-card-feature">
                                         <div class="uk-card-left">
                                             <div class="uk-card-icon">
@@ -129,7 +129,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="uk-width-expand">
+                                <div>
                                     <a href="#" class="uk-card uk-card-feature">
                                         <div class="uk-card-left">
                                             <div class="uk-card-icon">
